# okshelters-v2

./: .gitignore  CLAUDE.md  README.md  design.md  docker-compose.yml
android/: CLAUDE.md  design.md  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/shelternav/app/: MainActivity.kt  Models.kt
android/app/src/main/java/com/shelternav/app/bridge/: ShelterNavJNI.kt
android/app/src/main/java/com/shelternav/app/theme/: Color.kt  Theme.kt  Type.kt
android/app/src/main/java/com/shelternav/app/ui/components/: CapacityBar.kt  PulseRing.kt  RoutePolyline.kt  ShelterMarker.kt  StatusBadge.kt
android/app/src/main/java/com/shelternav/app/ui/map/: MapScreen.kt  MapViewComposable.kt
android/app/src/main/java/com/shelternav/app/ui/nav/: NavigationOverlay.kt
android/app/src/main/java/com/shelternav/app/ui/search/: SearchBar.kt
android/app/src/main/java/com/shelternav/app/ui/sheet/: ShelterDetailSheet.kt
android/app/src/main/java/com/shelternav/app/viewmodel/: MapViewModel.kt  NavigationViewModel.kt
gateway/: CLAUDE.md  Dockerfile  design.md  go.mod  go.sum  main.go
gateway/client/: geo_client.go
gateway/handler/: health.go  shelter.go  shelter_test.go
gateway/middleware/: auth.go  auth_test.go  cache.go  cache_test.go  httpjson.go  logging.go  logging_test.go  ratelimit.go  ratelimit_test.go  recovery.go
gateway/pb/: shelter.pb.go  shelter_grpc.pb.go
gateway/web/: app.js  index.html  style.css
geo-service/: CLAUDE.md  Cargo.toml  Dockerfile  build.rs  design.md
geo-service/benches/: nearest_query.rs
geo-service/src/: grpc.rs  haversine.rs  lib.rs  main.rs  rtree.rs  sync.rs
ios/: CLAUDE.md  design.md
ios/ShelterNav/: App.swift  Models.swift
ios/ShelterNav/Bridge/: ShelterNavBridge.swift
ios/ShelterNav/Theme/: Colors.swift  Haptics.swift  Typography.swift
ios/ShelterNav/ViewModels/: MapViewModel.swift  NavigationViewModel.swift
ios/ShelterNav/Views/: MapContainerView.swift  MapView.swift  NavigationOverlayView.swift  SearchBar.swift  ShelterSheet.swift
ios/ShelterNav/Views/Components/: PulseRing.swift  RoutePolyline.swift  ShelterPin.swift  StatusBadge.swift
libshelternav/: CLAUDE.md  CMakeLists.txt  design.md
libshelternav/asm/: haversine_avx2.asm  haversine_neon.S  heap_arm64.S  heap_x86.asm
libshelternav/include/: shelternav.h
libshelternav/src/: astar.c  haversine.c  kdtree.c  sync.c
migrations/: 001_init.sql  CLAUDE.md  design.md
proto/: CLAUDE.md  buf.gen.yaml  design.md  shelter.proto
